0.0.25

* python support
* story_vars_pretty - print story parameters in sorted order

0.2.24 2017-01-11

* strun reports changed story footprints to improve readability

0.2.23 2017-01-09

* print task name for meta stories
* remove extra lines from meta stories reports
* change reports layout ( hope for good )

0.2.22 2017-01-09

* ./dsl-test - contains tests for Outthentic::DSL
* restore ./inc in Git scm to allow `cpanm` install via git url
* task_name parameter ( to print task names when stories get runs from tasks  )

0.2.21 2016-12-22

* Requires the latest version of Outthentic::DSL
* Added some examples ( well tests )

0.2.20 2016-12-22

* Pass a string not filepath to the Outthentic::DSL validate method ( passing as filepath is still available for back compatibility )
* Requires the latest version of Outthentic::DSL
* Examples tweaked so that tests passed for the latest version of Outthentic::DSL

0.2.19 2016-12-19

* restore lost META.yml 

0.2.18 2016-12-19

* print story variables in strun's report 
* story statistics and custom reports feature (not documented yet)

0.2.17 2016-12-16

* make output more concise

0.2.16 2016-12-15

* `--purge-cache` parameter

0.2.15 2016-11-19

* `strun` --dump-config option to dump suite configuration
* suite.ini files - use Config::General with InterPolateEnv enabled


0.2.14 2016-11-18

* suite.ini files - use Config::General with InterPolateVars enabled
* `strun` - --nocolor option to run colorless mode.
* `SPARROW_NO_COLOR` environment variable

0.2.13 2016-11-14

* dump_os() - support for Minoca OS

0.2.12 2016-10-20

* choose cache dir location more safely to avoid multi users conflicts

0.2.11 2016-10-20

* don't run checks for failed scenarios
* empty check files are valid

0.2.10 2016-08-25

* sub _resolve_os - recognize a Red Hat OS
* sub dump_os - dump OS strings as is ( helpful when troubleshooting OS recognition issues )

0.2.9 2016-08-21

* meta stories - POD updated

0.2.8 2016-08-21

* meta stories
